<?xml version="1.0" encoding="utf-8"?>
<!--Copyright(c) 2009 by Appcelerator, Inc. All Rights Reserved.       -->
<!-- This is proprietary software. Do not redistribute without express -->
<!-- written permission.                                               -->

<resources>
    <string name="about_text">Titanium Developer (Beta)</string>
    <string name="about_title">About</string>
    <string name="app_list_title">Local Applications</string>
    <string name="app_name">Titanium Developer</string>
    <string name="apps_tab_title">Apps</string>
    <string name="community_tab_title">Community</string>
	<string name="install_title">Install</string>
	<string name="log_title">Operation Log</string>
	<string name="market_name">Market</string>
	<string name="no_network">Unable to contact the remote service.</string>
	<string name="refresh_title">Refresh</string>
	<string name="settings_title">Settings</string>
	<string name="preferences_title">Preferences</string>
	<string name="profile_tab_title">Profile</string>
	<string name="uninstall_title">Uninstall</string>
</resources>
